# fun-pinpoint

./: .gitignore  AGENTS.md  README.md  TODO.md  meson.build  meson_options.txt
data/: com.nedrichards.pinpoint.desktop.in  com.nedrichards.pinpoint.gschema.xml  com.nedrichards.pinpoint.metainfo.xml.in  com.nedrichards.pinpoint.xml  meson.build  pinpoint.gresource.xml  pinpoint.lang
data/gtk/: shortcuts-window.ui
data/introduction/: ORIGIN.md  bunny.webm  introduction.pin
docs/: accessibility.md  command-line.md  compatibility.md  coverage.md  external-editors.md  host-display-automation.md  media-formats.md  performance-audit.md  performance.md  presentation-format.md  remote-control.md  rendering-pipeline.md  session-restore.md
flatpak/: com.nedrichards.pinpoint.Devel.json  com.nedrichards.pinpoint.json
prototypes/: README.md  com.nedrichards.Pinpoint.Control.varlink  meson.build  pinpoint-remote-prototype.c  pp-dbus-prototype.c  pp-dbus-prototype.h  pp-mpris-prototype.c  pp-mpris-prototype.h  run-prototype-tests.sh  validate-varlink-schema.sh
src/: main.c  meson.build  pp-asset-monitor.c  pp-asset-monitor.h  pp-control.c  pp-control.h  pp-display-selection.c  pp-display-selection.h  pp-file-access.c  pp-file-access.h  pp-introduction.c  pp-introduction.h  pp-mpris.c  pp-mpris.h  pp-page-curl-view.c  pp-page-curl-view.h  pp-page-curl.c  pp-page-curl.h  pp-pdf-async.c  pp-pdf.c  pp-pdf.h  pp-presentation.c  pp-presentation.h  pp-render.c  pp-render.h  pp-speaker.c  pp-speaker.h  pp-stage.c  pp-stage.h  pp-transition.c  pp-transition.h  pp-video-thumbnail.c  pp-video-thumbnail.h
tests/: asan.supp  coverage-policy.json  coverage-report.py  lsan.supp  meson.build  run-coverage.sh  run-gcc-analysis.sh  run-host-display-test.sh  run-host-inhibit-test.sh  run-in-devel-flatpak.sh  run-leak-checks.sh  run-legacy-sysprof-profile.sh  run-sysprof-profile.sh  sdk-host-environment.sh  test-application.c  test-asset-monitor.c  test-control.c  test-display-selection.c  test-language-definition.c  test-lifecycle.c  test-media-formats.c  test-parser.c  test-performance.c  test-pixels.c  test-size.c  test-svg-renderers.c
tests/fixtures/: asset-store.pin  camera.pin  compatibility.pin  corrupt-video.pin  editor-highlighting.pin  legacy-transition.json  legacy-transition.pin  media-formats.pin  media-pipeline.pin  missing-video.pin  multi-monitor.pin  native-transitions.pin  offload-fullscreen.pin  page-curl.pin  pixel-reference.pin  raster-cache.pin  svg-quality.pin
tests/fixtures/folder-access/: demo.pin
tests/fixtures/media-formats/: README.md  pinpoint-av1-opus.webm  pinpoint-h264-main.mov  pinpoint-theora-vorbis.ogv  pinpoint-vp8-vorbis.webm
